Fixed a bug with subheading jumping up on smaller res

--- a/public/index.css
+++ b/public/index.css
@@ -355,6 +355,7 @@ a:focus {
     color: black;
 }
 #bigHeading{
+    display: block;
     text-align: center;
     font-size: 4rem;
 }
